--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "tinik/moon-slider",
-    "description": "MoonSlider module",
+    "description": "Slider module",
     "type": "magento2-module",
     "version": "1.0.0",
     "minimum-stability": "stable",
@@ -11,13 +11,20 @@
     ],
     "authors": [
         {
-            "name":"Nikolay Tyshchuk",
+            "name":"Mykolay Tyshchuk",
             "homepage": "http://github.com/tinik",
             "role": "Developer"
         }
     ],
+    "funding": [
+        {
+            "type": "patreon",
+            "url": "https://patreon.com/tinik"
+        }
+    ],
     "require": {
-        "php": "~7.1.0||~7.2.0||~7.3.0||~7.4.0",
+        "php": "~8.1.0",
+        "ext-fileinfo": "*",
         "magento/magento-composer-installer": "*",
         "magento/framework": "*"
     },
